// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalTransformCache fetchResultFromURI fetches result 1`] = `
Object {
  "code": "/* code from http://globalcache.com/foo */",
  "dependencies": Array [],
  "dependencyOffsets": Array [],
}
`;

exports[`GlobalTransformCache fetchResultFromURI retries once on timeout 1`] = `
Object {
  "code": "/* code from http://globalcache.com/foo */",
  "dependencies": Array [],
  "dependencyOffsets": Array [],
}
`;

exports[`GlobalTransformCache fetches results 1`] = `
Array [
  Object {
    "code": "/* code from http://globalcache.com/3b3b861b6b80dd038c51262ca8b8b9f76e353ada-foo.js */",
    "dependencies": Array [],
    "dependencyOffsets": Array [],
  },
  Object {
    "code": "/* code from http://globalcache.com/087b5bc3467f9a0670e49ce9118e6f6791aa12c6-bar.js */",
    "dependencies": Array [],
    "dependencyOffsets": Array [],
  },
]
`;
